组件化功能的引入

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'com.android.application'
+//apply plugin: 'com.android.application'
+apply plugin: 'com.dd.comgradle'
 
 android {
     compileSdkVersion 26
@@ -9,6 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [host: "app"]
+            }
+        }
     }
     buildTypes {
         release {
@@ -19,10 +26,18 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+//    implementation fileTree(include: ['*.jar'], dir: 'libs')
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'com.android.support.test:runner:0.5'
+//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation project(':componentservice')
+    annotationProcessor 'com.luojilab.ddcomponent:router-anno-compiler:1.0.0'
+
 }
+
+combuild {
+    applicationName = 'com.qp.componenttest.app.MyApplication'
+    isRegisterCompoAuto = true
+}
+
+
