--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'com.luojilab.ddcomponent:build-gradle:1.0.0'
+
         classpath 'com.android.tools.build:gradle:3.0.1'
         
 
