--- a/RxjavaRetrofitComponent/gradle.properties
+++ b/RxjavaRetrofitComponent/gradle.properties
@@ -12,7 +12,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 isRunAlone=true
-debugComponent=readcomponent,sharecomponent,RxjavaRetrofitComponent
-compileComponent=readcomponent,sharecomponent,RxjavaRetrofitComponent
 
+#debugComponent=sharecomponent
+#compileComponent=sharecomponent
 
+#debugComponent=sharecomponent,sharecomponentkotlin
+#compileComponent=sharecomponent,sharecomponentkotlin
