--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':basiclib', ':basicres', ':componentservice', ':sharecomponent', ':readcomponent'
+include ':app', ':basiclib', ':basicres', ':componentservice', ':sharecomponent', ':readcomponent', ':RxjavaRetrofitComponent'
